--- a/client/app/pages/signup/signup.html
+++ b/client/app/pages/signup/signup.html
@@ -9,13 +9,13 @@
   <form [ngFormModel]="signupForm" (submit)="signup(signupForm.value)">
 
     <ion-item>
-      <ion-label floating>Company name</ion-label>
+      <ion-label stacked>Company name</ion-label>
       <ion-input type="text" ngControl="companyName"></ion-input>
     </ion-item>
     <control-messages control="companyName"></control-messages>
 
     <ion-item>
-      <ion-label>City</ion-label>
+      <ion-label stacked>City</ion-label>
       <ion-select ngControl="city">
         <ion-option value="Karachi">Karachi</ion-option>
         <ion-option value="Hyderabad">Hyderabad</ion-option>
@@ -24,45 +24,44 @@
  <control-messages control="city"></control-messages> 
 
 <ion-item>
-      <ion-label>Area</ion-label>
-      <ion-select ngControl="area">
-        <ion-option value="North Karachi">North Karachi</ion-option>
-        <ion-option value="Gulshan">Gulshan</ion-option>
-           </ion-select>
+      <ion-label stacked>Area</ion-label>
+      <ion-select ngControl="areaName" >
+           <option *ngFor="#area of _areas" [value]="area._id">{{area.name}}</option>
+                   </ion-select>
     </ion-item>
- <control-messages control="area"></control-messages> 
+ <control-messages control="areaName"></control-messages> 
 
     <ion-item>
-      <ion-label floating>Address</ion-label>
+      <ion-label stacked>Address</ion-label>
       <ion-input type="text" ngControl="address"></ion-input>
     </ion-item>
    <control-messages control="address"></control-messages> 
 
 <ion-item>
-      <ion-label floating>Phone</ion-label>
+      <ion-label stacked>Phone</ion-label>
       <ion-input type="text" ngControl="phone"></ion-input>
     </ion-item>
     <control-messages control="phone"></control-messages>
 <ion-item>
-      <ion-label floating>Email</ion-label>
+      <ion-label stacked>Email</ion-label>
       <ion-input type="email" ngControl="email"></ion-input>
     </ion-item>
     <control-messages control="email"></control-messages>
 
 <ion-item>
-      <ion-label floating>Authorised Person</ion-label>
+      <ion-label stacked>Authorised Person</ion-label>
       <ion-input type="text" ngControl="userName"></ion-input>
     </ion-item>
     <control-messages control="userName"></control-messages>
 
 <ion-item>
-      <ion-label floating>Login name</ion-label>
+      <ion-label stacked>Login name</ion-label>
       <ion-input type="text" ngControl="loginName"></ion-input>
     </ion-item>
      <control-messages control="loginName"></control-messages>
 
     <ion-item>
-      <ion-label floating>Password</ion-label>
+      <ion-label stacked>Password</ion-label>
       <ion-input type="password" ngControl="password"></ion-input>
     </ion-item>
     <control-messages control="password"></control-messages>
