Updated Signup for Select

--- a/client/app/pages/signup/signup.html
+++ b/client/app/pages/signup/signup.html
@@ -25,8 +25,8 @@
 
 <ion-item>
       <ion-label stacked>Area</ion-label>
-      <ion-select ngControl="areaName" >
-           <option *ngFor="#area of _areas" [value]="area._id">{{area.name}}</option>
+      <ion-select ngControl="areaName"  >
+           <option *ngFor="#area of _areas" [ngValue]="area">{{area.name}}</option>
                    </ion-select>
     </ion-item>
  <control-messages control="areaName"></control-messages> 
