--- a/client/app/pages/hello-ionic/hello-ionic.html
+++ b/client/app/pages/hello-ionic/hello-ionic.html
@@ -23,7 +23,7 @@
   </p>
   
    <div class="message" *ngFor="#customer of _customers">
-         <h1 class="title">{{customer.name}}</h1>
+         <h1 class="title">{{customer.companyName}}</h1>
          <div class="description">{{customer.email}}</div>
       </div>
 
